--- a/index.html
+++ b/index.html
@@ -4,141 +4,130 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portfolio</title>
+    <title>Portfolio - Ahmed K</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <main id="app">
 
-    <div class="sectionMenu">
-        <div class="menu">
-            <div class="menuIcone"><img src="./assets/img/iconeMenu.png"></div>
-            <a href="" class="btnMenu presentationBtn">Présentation</a>
-            <a href="" class="btnMenu projetBtn">Projets</a>
-            <a href="" class="btnMenu competenceBtn">Compétences</a>
-            <a href="" class="btnMenu">Contact</a>
+        <div class="sectionMenu">
+            <div class="menu">
+                <div class="menuIcone"><img src="./assets/img/iconeMenu.png"></div>
+                <a href="" class="btnMenu presentationBtn">Présentation</a>
+                <a href="" class="btnMenu projetBtn">Projets</a>
+                <a href="" class="btnMenu competenceBtn">Compétences</a>
+                <a href="" class="btnMenu contactBtn">Contact</a>
+                <button @click="toggleDark" class="btn-darkmode">
+                    🌙
+                </button>
+            </div>
+
+            <div class="sectionBanniereTop">
+
+                <button @click="inverse" class="boutonKaomoji" :class="{ 'flip-horizontal': flipped }">ᕕ( ᐛ )ᕗ</button>
+
+            </div>
+            <div class="marquee">
+                <p class="vitesse1 texteDefileRouge">ヽ(￣д￣;)ノ=3=3=3</p>
+                <p class="vitesse2 texteDefileVert">└( `ー´ )┐=C =C =C =C</p>
+                <p class="vitesse3 texteDefileBleu">└(・ω・;)┐=C =C =C =C =C</p>
+            </div>
+
+
+
         </div>
-        
-        <p>texte defilant</p>
-    </div>
 
+        <div class="titreSection">
+            <h2>Qui suis-je</h2>
+        </div>
 
-    <div class="titreSection">
-        <h2>Qui suis-je</h2>
-    </div>
-    <div class="sectionIntro">
-
-
+        <div class="sectionIntro">
             <div class="blocIntro">
                 <h2>Qui suis-je</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit
-                    anim id est laborum.</p><br>
-                <p>loreum</p>
+                <p>Je m’appelle Ahmed K. Je suis passionné par le montage vidéo et tout ce qui touche à la création
+                    visuelle. J’aime donner vie aux idées à travers le rythme, la musique et le visuel.</p>
+                <p>Mon objectif est de trouver un stage dans un studio créatif, dans une équipe où la collaboration et
+                    la
+                    créativité sont au cœur des projets. Je veux apprendre, expérimenter et perfectionner mes techniques
+                    de montage dans un environnement stimulant.</p>
             </div>
 
             <img src="./assets/img/moi.jpg" class="blocMaPhoto">
-    </div>
+        </div>
 
-    <div class="titreSection">
-        <h2>Mes projets</h2>
-    </div>
-    <div class="sectionIntro">
+        <div class="titreSection">
+            <h2>Mes projets</h2>
+        </div>
 
+        <div class="sectionProjets">
+            <div class="swiper mySwiper fondH3Swiper">
+                <div class="swiper-wrapper">
 
-            <div class="blocMessage">
+                    <div class="swiper-slide" v-for="projets in project"><img class="card-img-top" :src="projets.images">
+                        <h3>{{projets.title}}</h3>
+                        <p>En cours de préparation...</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="blocMessageProjet">
                 <h2>Mes projets</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit
-                    anim id est laborum.</p><br>
-                <p>loreum</p>
-            </div>
-    </div>
-
-    <div class="swiper mySwiper fondH3Swiper">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <img class="card-img-top" src="./assets/img/placeholder.png">
-                <h3>Nom du projet</h3>
-                <p>fdafdasf</p>
-            </div>
-            <div class="swiper-slide"><img class="card-img-top" src="./assets/img/placeholder.png">
-                <h3>Nom du projet</h3>
-                <p>fdafdasf</p>
-            </div>
-            <div class="swiper-slide"><img class="card-img-top" src="./assets/img/placeholder.png">
-                <h3>Nom du projet</h3>
-                <p>fdafdasf</p>
-            </div>
-            <div class="swiper-slide"><img class="card-img-top" src="./assets/img/placeholder.png">
-                <h3>Nom du projet</h3>
-                <p>fdafdasf</p>
-            </div>
-            <div class="swiper-slide"><img class="card-img-top" src="./assets/img/placeholder.png">
-                <h3>Nom du projet</h3>
-                <p>fdafdasf</p>
+                <p>J’aime explorer différents styles et techniques dans mes projets, qu’il s’agisse de montage vidéo,
+                    d’animation ou de conception visuelle. Chaque projet me permet de repousser mes limites et
+                    d’apprendre de nouvelles façons de raconter une histoire à travers l’image et le son.</p><br>
+                <p>Une sélection de mes réalisations sera bientôt présentée ici.</p>
             </div>
         </div>
-    </div>
 
-    <div class="titreSection">
-        <h2>Mes compétences</h2>
-    </div>
-    <div class="sectionIntro">
+        <div class="titreSection">
+            <h2>Mes compétences</h2>
+        </div>
 
-
+        <div class="sectionCompetences">
             <div class="blocMessage">
                 <h2>Mes compétences</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit
-                    anim id est laborum.</p><br>
-                <p>loreum</p>
+                <p>Je maîtrise plusieurs outils et logiciels liés à la création visuelle et au développement web :</p>
+                <br>
+                <p>• HTML / CSS<br>
+                    • DaVinci Resolve<br>
+                    • Autodesk Maya 3D<br>
+                    • Reaper<br>
+                    • Adobe Photoshop<br>
+                    • Figma</p><br>
+                <p>En plus de mes compétences techniques, je mets beaucoup d’importance sur le travail d’équipe et la
+                    créativité. J’aime collaborer, partager des idées et participer activement à la création d’un projet
+                    collectif.</p>
             </div>
-    </div>
-    <div class="titreSection">
-        <h2>Me contacter</h2>
-    </div>
-    <div class="sectionContact">
+        </div>
 
+        <div class="titreSection">
+            <h2>Me contacter</h2>
+        </div>
 
+        <div class="sectionContact">
             <div class="blocMessage">
-                <h2>Contact</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit
-                    anim id est laborum.</p><br>
-                <p>loreum</p>
+                <h2>Contact</h2><br>
+                <p>Ahmed K</p>
+                <p>Courriel : <a href="mailto:Ahmedkaissoumi@gmail.com">Ahmedkaissoumi@gmail.com</a></p>
+                <p>Téléphone : 438-xxx-xxxx</p><br>
+                <p>Je suis toujours ouvert à discuter de nouveaux projets ou collaborations. N’hésitez pas à me
+                    contacter pour toute question ou opportunité !</p>
             </div>
+        </div>
+    </main>
 
-    </div>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="./script.js" defer></script>
 
 </body>
 
