ajouts de titres de projets, tests divers

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
 
         </div>
 
+        <div class="backgroundSombreR">
+        </div>
+
+        <div class="backgroundSombreG">
+        </div>
+
+        <div class="backgroundSombreR">
+        </div>
+
         <div class="titreSection">
             <h2>Qui suis-je</h2>
         </div>
@@ -56,9 +65,11 @@
                 <h2>Qui suis-je</h2>
                 <p>Je m’appelle Ahmed K. Je suis passionné par le montage vidéo et tout ce qui touche à la création
                     visuelle. J’aime donner vie aux idées à travers le rythme, la musique et le visuel.</p>
-                <p>Mon objectif est de trouver un stage dans un studio créatif, dans une équipe où la collaboration et
+                <p>Mon objectif est de trouver un stage dans un studio créatif, dans une équipe où la collaboration
+                    et
                     la
-                    créativité sont au cœur des projets. Je veux apprendre, expérimenter et perfectionner mes techniques
+                    créativité sont au cœur des projets. Je veux apprendre, expérimenter et perfectionner mes
+                    techniques
                     de montage dans un environnement stimulant.</p>
             </div>
 
@@ -73,7 +84,8 @@
             <div class="swiper mySwiper fondH3Swiper">
                 <div class="swiper-wrapper">
 
-                    <div class="swiper-slide" v-for="projets in project"><img class="card-img-top" :src="projets.images">
+                    <div class="swiper-slide" v-for="projets in project"><img class="card-img-top"
+                            :src="projets.images">
                         <h3>{{projets.title}}</h3>
                         <p>En cours de préparation...</p>
                     </div>
@@ -82,10 +94,29 @@
 
             <div class="blocMessageProjet">
                 <h2>Mes projets</h2>
-                <p>J’aime explorer différents styles et techniques dans mes projets, qu’il s’agisse de montage vidéo,
+                <p>J’aime explorer différents styles et techniques dans mes projets, qu’il s’agisse de montage
+                    vidéo,
                     d’animation ou de conception visuelle. Chaque projet me permet de repousser mes limites et
                     d’apprendre de nouvelles façons de raconter une histoire à travers l’image et le son.</p><br>
                 <p>Une sélection de mes réalisations sera bientôt présentée ici.</p>
+            </div>
+        </div>
+
+        <div class="projets">
+            <div class="titreSectionEclipse">
+                <h2>Eclipse Hunter</h2>
+            </div>
+
+            <div class="titreSectionBandit">
+                <h2>Bandit</h2>
+            </div>
+
+            <div class="titreSectionMachine">
+                <h2>Machine</h2>
+            </div>
+
+            <div class="titreSectionProf">
+                <h2>Prof</h2>
             </div>
         </div>
 
@@ -96,7 +127,8 @@
         <div class="sectionCompetences">
             <div class="blocMessage">
                 <h2>Mes compétences</h2>
-                <p>Je maîtrise plusieurs outils et logiciels liés à la création visuelle et au développement web :</p>
+                <p>Je maîtrise plusieurs outils et logiciels liés à la création visuelle et au développement web :
+                </p>
                 <br>
                 <p>• HTML / CSS<br>
                     • DaVinci Resolve<br>
@@ -104,8 +136,10 @@
                     • Reaper<br>
                     • Adobe Photoshop<br>
                     • Figma</p><br>
-                <p>En plus de mes compétences techniques, je mets beaucoup d’importance sur le travail d’équipe et la
-                    créativité. J’aime collaborer, partager des idées et participer activement à la création d’un projet
+                <p>En plus de mes compétences techniques, je mets beaucoup d’importance sur le travail d’équipe et
+                    la
+                    créativité. J’aime collaborer, partager des idées et participer activement à la création d’un
+                    projet
                     collectif.</p>
             </div>
         </div>
