--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="swiper-slide" v-for="projets in project"><img class="card-img-top"
                             :src="projets.images">
                         <h3>{{projets.title}}</h3>
-                        <p>En cours de préparation...</p>
+                        <p>{{projets.category}}</p>
                     </div>
                 </div>
             </div>
@@ -107,16 +107,58 @@
                 <h2>Eclipse Hunter</h2>
             </div>
 
+            <div class="miniGalerieProjets">
+                <img class="galerieImg" src="./assets/img/projet-1.png" alt="">
+                <img class="galerieImg" src="./assets/img/projetEclipse2.png" alt="">
+                <img class="galerieImg" src="./assets/img/projetEclipse3.png" alt="">
+            </div>
+            <div class="blocMessage2">
+                <p>Un court jeu de plateforme développé dans le cadre de mon cours d'intégration multimédia</p>
+            </div>
+        </div>
+
+        <div class="projets">
             <div class="titreSectionBandit">
                 <h2>Bandit</h2>
             </div>
 
+            <div class="miniGalerieProjets">
+                <img class="galerieImg" src="./assets/img/projet-2.png" alt="">
+                <img class="galerieImg" src="./assets/img/projetVr2.png" alt="">
+                <img class="galerieImg" src="./assets/img/projetVr3.png" alt="">
+            </div>
+            <div class="blocMessage2">
+                <p>Un jeu en réalité virtuelle développé sur unity inspiré sur le célèbre jeu rétro "frogger", nous devons traverser la rue et éviter de se faire écraser par des voitures.</p>
+            </div>
+        </div>
+
+        <div class="projets">
             <div class="titreSectionMachine">
                 <h2>Machine</h2>
             </div>
 
+            <div class="miniGalerieProjets">
+                <img class="galerieImg" src="./assets/img/projet-3.png" alt="">
+                <img class="galerieImg" src="./assets/img/projetMachine2.png" alt="">
+                <img class="galerieImg" src="./assets/img/projetMachine3.png" alt="">
+            </div>
+            <div class="blocMessage2">
+                <p>Une vidéo en stop motion que j'ai conçu avec mes collègues : x y z c , Jacques, 22 ans, découvre une machine à écrire énigmatique qui matérialise ses émotions les plus sombres. Confronté à ses peurs incarnées, il trouve la force de les affronter et quitte la pièce dans une lumière qui s’éteint doucement.</p>
+            </div>
+        </div>
+
+        <div class="projets">
             <div class="titreSectionProf">
                 <h2>Prof</h2>
+            </div>
+
+            <div class="miniGalerieProjets">
+                <img class="galerieImg" src="./assets/img/projet-4.png" alt="">
+                <img class="galerieImg" src="./assets/img/projetEclipse2.png" alt="">
+                <img class="galerieImg" src="./assets/img/projetEclipse3.png" alt="">
+            </div>
+            <div class="blocMessage2">
+                <p>Un jeu marrant que j'ai développé pour taquiner un ami</p>
             </div>
         </div>
 
