pre-post-githubpage
pre-post-githubpage

correction mineure

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="sectionIntro">
             <div class="blocIntro">
                 <h2>Qui suis-je</h2>
-                <p>Je m’appelle Ahmed K. Je suis passionné par le montage vidéo et tout ce qui touche à la création
-                    visuelle. J’aime donner vie aux idées à travers le rythme, la musique et le visuel.</p>
+                <p>Je m'appelle Ahmed K. Je suis passionné par le montage vidéo et tout ce qui touche à la création
+                    visuelle. J'aime donner vie aux idées à travers le rythme, la musique et le visuel.</p>
                 <p>Mon objectif est de trouver un stage dans un studio créatif, dans une équipe où la collaboration
                     et
                     la
@@ -87,10 +87,10 @@
 
             <div class="blocMessageProjet">
                 <h2>Mes projets</h2>
-                <p>J’aime explorer différents styles et techniques dans mes projets, qu’il s’agisse de montage
+                <p>J'aime explorer différents styles et techniques dans mes projets, qu'il s'agisse de montage
                     vidéo,
-                    d’animation ou de conception visuelle. Chaque projet me permet de repousser mes limites et
-                    d’apprendre de nouvelles façons de raconter une histoire à travers l’image et le son.</p><br>
+                    d'animation ou de conception visuelle. Chaque projet me permet de repousser mes limites et
+                    d'apprendre de nouvelles façons de raconter une histoire à travers l'image et le son.</p><br>
                 <p>Une sélection de mes réalisations sera bientôt présentée ici.</p>
             </div>
         </div>
@@ -145,7 +145,7 @@
                 <p>Une vidéo en stop motion que j'ai conçu avec mes collègues : Justin Monpetit, Radhouane Kordan, Félix
                     Lavoie. <br> Jacques, 22 ans, découvre une machine à écrire énigmatique qui matérialise ses émotions
                     les plus sombres. Confronté à ses peurs incarnées, il trouve la force de les affronter et quitte la
-                    pièce dans une lumière qui s’éteint doucement.</p>
+                    pièce dans une lumière qui s'éteint doucement.</p>
             </div>
         </div>
 
@@ -182,9 +182,9 @@
                     • Reaper<br>
                     • Adobe Photoshop<br>
                     • Figma</p><br>
-                <p>En plus de mes compétences techniques, je mets beaucoup d’importance sur le travail d’équipe et
+                <p>En plus de mes compétences techniques, je mets beaucoup d'importance sur le travail d'équipe et
                     la
-                    créativité. J’aime collaborer, partager des idées et participer activement à la création d’un
+                    créativité. J'aime collaborer, partager des idées et participer activement à la création d'un
                     projet
                     collectif.</p>
             </div>
@@ -200,7 +200,7 @@
                 <p>Ahmed K</p>
                 <p>Courriel : <a href="mailto:Ahmedkaissoumi@gmail.com">Ahmedkaissoumi@gmail.com</a></p>
                 <p>Téléphone : 438-xxx-xxxx</p><br>
-                <p>Je suis toujours ouvert à discuter de nouveaux projets ou collaborations. N’hésitez pas à me
+                <p>Je suis toujours ouvert à discuter de nouveaux projets ou collaborations. N'hésitez pas à me
                     contacter pour toute question ou opportunité !</p>
             </div>
         </div>
