--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                 <p>{{projets.description}}</p>
             </div>
 
+            <div v-if="projets.lien" class="lienProjet">
+                <a :href="projets.lien" target="_blank">
+                    Voir le projet →
+                </a>
+            </div>
+
             <div v-if="projets.processus" class="processusCreation">
                 <h3>Processus de création</h3>
 
