--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="#projets" class="btnMenu projetBtn">Projets</a>
                 <a href="#competences" class="btnMenu competenceBtn">Compétences</a>
                 <a href="#contact" class="btnMenu contactBtn">Contact</a>
-                <button @click="toggleSombre" class="btn-darkmode">
+                <button @click="toggleSombre" class="btn-darkmode"> <!--On click, j'appelle la méthode toggleSombre dans mon .js -->
                     🌜🌞
                 </button>
             </div>
